--- a/package.json
+++ b/package.json
@@ -1,61 +1,62 @@
 {
-    "name": "ShowMyStack_BackEnd",
-    "version": "0.0.1",
-    "description": "ShowMyStack server",
-    "main": "server.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Urigo/ShowMyStack_BackEnd"
-    },
-    "keywords": [
-        "ShowMyStack",
-        "server",
-        "hapi",
-        "mongoose"
-    ],
-    "author": "Dotan Simha",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/Urigo/ShowMyStack_BackEnd/issues"
-    },
-    "homepage": "https://github.com/Urigo/ShowMyStack_BackEnd",
-    "devDependencies": {
-        "grunt-contrib-jshint": "~0.7.0",
-        "grunt-contrib-nodeunit": "^0.3.2",
-        "grunt-contrib-watch": "~0.5.0",
-        "load-grunt-tasks": "~0.2.0",
-        "time-grunt": "~0.2.0",
-        "jshint-stylish": "~0.1.3",
-        "grunt-contrib-livereload": "^0.1.2",
-        "grunt-hapi": "^0.7.0",
-        "sinon": "^1.9.0",
-        "mocha": "^1.17.1",
-        "chai": "^1.9.0",
-        "grunt-mocha-test": "^0.9.4",
-        "blanket": "^1.1.6"
-    },
-    "dependencies": {
-        "mongodb": "~1.3.23",
-        "mongoose": "~3.8.3",
-        "hapi": "^4.0.0",
-        "handlebars": "^1.3.0",
-        "lout": "^3.1.0",
-        "passport": "^0.2.0",
-        "passport-local": "^0.1.6",
-        "travelogue": "https://github.com/cjihrig/travelogue/tarball/56c9261b052b381b6f86b9f4c939bbed7d68816b",
-        "yar": "^2.1.0",
-        "joi": "^3.1.0",
-        "bcrypt": "^0.7.7",
-        "mongoose-timestamp": "^0.2.0",
-        "lodash": "^2.4.1",
-        "passport-http-bearer": "^1.0.1",
-        "uid2": "0.0.3",
-        "dotty": "0.0.2",
-        "q": "^1.0.1",
-        "confidence": "^0.12.1",
-        "fb": "^0.7.0"
-    }
+  "name": "ShowMyStack_BackEnd",
+  "version": "0.0.1",
+  "description": "ShowMyStack server",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Urigo/ShowMyStack_BackEnd"
+  },
+  "keywords": [
+    "ShowMyStack",
+    "server",
+    "hapi",
+    "mongoose"
+  ],
+  "author": "Dotan Simha",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Urigo/ShowMyStack_BackEnd/issues"
+  },
+  "homepage": "https://github.com/Urigo/ShowMyStack_BackEnd",
+  "devDependencies": {
+    "grunt-contrib-jshint": "~0.7.0",
+    "grunt-contrib-nodeunit": "^0.3.2",
+    "grunt-contrib-watch": "~0.5.0",
+    "load-grunt-tasks": "~0.2.0",
+    "time-grunt": "~0.2.0",
+    "jshint-stylish": "~0.1.3",
+    "grunt-contrib-livereload": "^0.1.2",
+    "grunt-hapi": "^0.7.0",
+    "sinon": "^1.9.0",
+    "mocha": "^1.17.1",
+    "chai": "^1.9.0",
+    "grunt-mocha-test": "^0.9.4",
+    "blanket": "^1.1.6"
+  },
+  "dependencies": {
+    "bcrypt": "^0.7.7",
+    "confidence": "^0.12.1",
+    "dotty": "0.0.2",
+    "fb": "^0.7.0",
+    "github": "^0.1.16",
+    "handlebars": "^1.3.0",
+    "hapi": "^4.0.0",
+    "joi": "^3.1.0",
+    "lodash": "^2.4.1",
+    "lout": "^3.1.0",
+    "mongodb": "~1.3.23",
+    "mongoose": "~3.8.3",
+    "mongoose-timestamp": "^0.2.0",
+    "passport": "^0.2.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^0.1.6",
+    "q": "^1.0.1",
+    "travelogue": "https://github.com/cjihrig/travelogue/tarball/56c9261b052b381b6f86b9f4c939bbed7d68816b",
+    "uid2": "0.0.3",
+    "yar": "^2.1.0"
+  }
 }
